# noob-cpp

./: CMakeLists.txt
src/: main.cpp
src/headers/: Person.h  Student.h  stdafx.h
src/impl/: Person.cpp  Student.cpp
